Create base structure for home page. Reorganize website structure to better direct traffic

--- a/index.html
+++ b/index.html
@@ -17,16 +17,94 @@
     <meta name="theme-color" content="#45659d" />
   </head>
   <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
-      <a href="/">
-        <img src="/assets/images/griffinshield.jpeg" alt="" />
-        <h1>The Griffin Legends</h1>
-      </a>
-      <nav>
-        <ul>
-          <li></li>
-        </ul>
-      </nav>
+      <div class="inner-content">
+        <a href="/" class="logo-container">
+          <img class="logo" src="/assets/images/griffinshield.jpeg" alt="" />
+          <div class="sitename">The Griffin Legends</div>
+        </a>
+        <nav>
+          <ul>
+            <li><a href="/books">Books</a></li>
+            <li>
+              <a href="https://the-griffin-legends.creator-spring.com">Shop</a>
+            </li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
+    <main id="main-content">
+      <div class="inner-content">
+        <h1>The Griffin Legends</h1>
+        <div>Mark and Summer Howard</div>
+        <section>
+          <h2>Featured Publication</h2>
+          <h3>Godfrey's Crusade</h3>
+          <div class="fifty-fifty-column">
+            <div class="featured-publication-image-container">
+              <img
+              class="featured-publication-image"
+                src="/assets/images/godfreyscrusade.jpg"
+                alt="Godfrey's Crusade"
+              />
+            </div>
+            <div>
+              <p>
+                A crusade is called to aid the Kingdom of Azgald in the distant
+                Nordslands, and the young idealistic knight, Godfrey, does not
+                hesitate to volunteer. Yet Godfrey soon learns that the greatest
+                threat to the expedition’s success is not the savage clans under
+                High Warlord Alvir and the Great Witch of the North, Nera, or
+                the orcs and cyclopes that fight beside the clans but the
+                rivalries between the crusaders themselves. Can Godfrey
+                interpret the vision granted to him by the gods and unite the
+                crusaders with his holy blade? Will his love, Madeline, be able
+                to keep her magical powers hidden from suspicious priests and
+                opportunistic lords? Will they be able to stop Nera and Alvir
+                from unleashing an ancient evil upon Azgald or will Godfrey and
+                his friends all meet a bitter end in the frigid Nordslands?
+              </p>
+              <a class="button" href="/books/godfreys-crusade"
+                >Purchase Godfrey's Crusade</a
+              >
+            </div>
+          </div>
+        </section>
+        <section>
+          <h2>Interested in Learning More?</h2>
+          <p>
+            Sign up for our email list to receive important updates and future
+            messages.
+          </p>
+          <div class="mailchimp-form">Mailchimp Form here</div>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="inner-content">
+        <div>
+          <a href="https://www.facebook.com/HowardMarkLouis/">
+            <svg
+              stroke="currentColor"
+              fill="currentColor"
+              stroke-width="0"
+              viewBox="0 0 320 512"
+              height="1em"
+              width="1em"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
+              ></path>
+            </svg>
+          </a>
+        </div>
+        <div class="copyright">©2024 The Griffin Legends</div>
+        <a href="/privacy-policy">Privacy Policy</a>
+      </div>
+    </footer>
   </body>
 </html>
