--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Griffin Legends</title>
-    <link href="/normalize.css" rel="stylesheet" />
-    <link href="/global.css" rel="stylesheet" />
-    <link href="/home.css" rel="stylesheet" />
+    <link href="./normalize.css" rel="stylesheet" />
+    <link href="./global.css" rel="stylesheet" />
+    <link href="./home.css" rel="stylesheet" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#45659d" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link rel="manifest" href="./site.webmanifest" />
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
   </head>
@@ -20,18 +20,18 @@
     <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
       <div class="inner-content">
-        <a href="/" class="logo-container">
-          <img class="logo" src="/assets/images/griffinshield.jpeg" alt="" />
+        <a href="./" class="logo-container">
+          <img class="logo" src="./assets/images/griffinshield.jpeg" alt="" />
           <div class="sitename">The Griffin Legends</div>
         </a>
         <nav>
           <ul>
-            <li><a href="/books">Books</a></li>
+            <li><a href="./books">Books</a></li>
             <li>
               <a href="https://the-griffin-legends.creator-spring.com">Shop</a>
             </li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="./about">About</a></li>
+            <li><a href="./contact">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -47,7 +47,7 @@
             <div class="featured-publication-image-container">
               <img
               class="featured-publication-image"
-                src="/assets/images/godfreyscrusade.jpg"
+                src="./assets/images/godfreyscrusade.jpg"
                 alt="Godfrey's Crusade"
               />
             </div>
@@ -67,7 +67,7 @@
                 from unleashing an ancient evil upon Azgald or will Godfrey and
                 his friends all meet a bitter end in the frigid Nordslands?
               </p>
-              <a class="button" href="/books/godfreys-crusade"
+              <a class="button" href="./books/godfreys-crusade"
                 >Purchase Godfrey's Crusade</a
               >
             </div>
@@ -103,7 +103,7 @@
           </a>
         </div>
         <div class="copyright">©2024 The Griffin Legends</div>
-        <a href="/privacy-policy">Privacy Policy</a>
+        <a href="./privacy-policy">Privacy Policy</a>
       </div>
     </footer>
   </body>
