Add styles to homepage

--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <link href="./normalize.css" rel="stylesheet" />
     <link href="./global.css" rel="stylesheet" />
     <link href="./home.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
     <link rel="manifest" href="./site.webmanifest" />
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
@@ -40,13 +55,13 @@
       <div class="inner-content">
         <h1>The Griffin Legends</h1>
         <div>Mark and Summer Howard</div>
-        <section>
+        <section class="featured-publication-container">
           <h2>Featured Publication</h2>
           <h3>Godfrey's Crusade</h3>
           <div class="fifty-fifty-column">
             <div class="featured-publication-image-container">
               <img
-              class="featured-publication-image"
+                class="featured-publication-image"
                 src="./assets/images/godfreyscrusade.jpg"
                 alt="Godfrey's Crusade"
               />
@@ -73,7 +88,7 @@
             </div>
           </div>
         </section>
-        <section>
+        <section class="contact-container">
           <h2>Interested in Learning More?</h2>
           <p>
             Sign up for our email list to receive important updates and future
