Adjust home styles for mobile

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </svg>
           </a>
         </div>
-        <div id="copyright">©2024 The Griffin Legends</div>
+        <div id="copyright" class="copyright">©2024 The Griffin Legends</div>
         <div class="links">
           <a href="./privacy-policy">Privacy Policy</a>
           <div>
