--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
             <img src="../assets/images/mark.jpg" alt="Mark Howard" />
           </div>
           <div class="text-container">
-            <h2>Mark Howard</h2>
+            <h2 id="mark">Mark Howard</h2>
             <p>
               I’m thrilled you’re here, about to go on this crusade with me.
               It’s been a long pilgrimage already, writing this book. It started
@@ -106,7 +106,7 @@
             <img src="../assets/images/summer.jpg" alt="Summer Howard" />
           </div>
           <div class="text-container">
-            <h2>Summer Howard</h2>
+            <h2 id="summer">Summer Howard</h2>
             <p>
               I have always loved reading, living the lives of the characters in
               the books as the words unfolded their destinies. Delving into the
@@ -155,6 +155,27 @@
             >
               <path
                 d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
+              ></path>
+            </svg>
+          </a>
+          <a href="https://www.youtube.com/@HowardMarkLouis">
+            <svg
+              stroke="currentColor"
+              fill="currentColor"
+              stroke-width="0"
+              viewBox="0 0 512 512"
+              height="1em"
+              width="1em"
+              xmlns="http://www.w3.org/2000/svg"
+              data-darkreader-inline-fill=""
+              data-darkreader-inline-stroke=""
+              style="
+                --darkreader-inline-fill: currentColor;
+                --darkreader-inline-stroke: currentColor;
+              "
+            >
+              <path
+                d="M508.6 148.8c0-45-33.1-81.2-74-81.2C379.2 65 322.7 64 265 64h-18c-57.6 0-114.2 1-169.6 3.6C36.6 67.6 3.5 104 3.5 149 1 184.6-.1 220.2 0 255.8c-.1 35.6 1 71.2 3.4 106.9 0 45 33.1 81.5 73.9 81.5 58.2 2.7 117.9 3.9 178.6 3.8 60.8.2 120.3-1 178.6-3.8 40.9 0 74-36.5 74-81.5 2.4-35.7 3.5-71.3 3.4-107 .2-35.6-.9-71.2-3.3-106.9zM207 353.9V157.4l145 98.2-145 98.3z"
               ></path>
             </svg>
           </a>
