add contact page

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </main>
     <footer>
       <div class="inner-content">
-        <div>
+        <div class="socials">
           <a href="https://www.facebook.com/HowardMarkLouis/">
             <svg
               stroke="currentColor"
