--- a/about/index.html
+++ b/about/index.html
@@ -182,7 +182,7 @@
         </div>
         <div id="copyright" class="copyright">©2024 The Griffin Legends</div>
         <div class="links">
-          <a href="./privacy-policy">Privacy Policy</a>
+          <a href="../privacy-policy">Privacy Policy</a>
           <div>
             Website built and designed by
             <a href="https://alexanderburdiss.com">Alexander Burdiss</a>
