--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact | The Griffin Legends</title>
-    <link href="../normalize.css" rel="stylesheet" />
-    <link href="../global.css" rel="stylesheet" />
+    <link href="../../normalize.css" rel="stylesheet" />
+    <link href="../../global.css" rel="stylesheet" />
     <link href="./contact.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -16,22 +16,22 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="../apple-touch-icon.png"
+      href="../../apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../favicon-32x32.png"
+      href="../../favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../favicon-16x16.png"
+      href="../../favicon-16x16.png"
     />
-    <link rel="manifest" href="../site.webmanifest" />
-    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#45659d" />
+    <link rel="manifest" href="../../site.webmanifest" />
+    <link rel="mask-icon" href="../../safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
   </head>
@@ -39,18 +39,34 @@
     <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
       <div class="inner-content">
-        <a href="../" class="logo-container">
-          <img class="logo" src="../assets/images/griffinshield.png" alt="" />
+        <a href="../../" class="logo-container">
+          <img
+            class="logo"
+            src="../../assets/images/griffinshield.png"
+            alt=""
+          />
           <div class="sitename">The Griffin Legends</div>
         </a>
         <nav>
           <ul>
-            <li><a href="../books">Books</a></li>
+            <li class="has-submenu">
+              <a href="../../books">Books</a>
+              <ul class="submenu">
+                <li><a href="../../books/lore">Lore</a></li>
+              </ul>
+            </li>
             <li>
               <a href="https://the-griffin-legends.creator-spring.com">Shop</a>
             </li>
-            <li><a href="../about">About</a></li>
-            <li><a href="../contact">Contact</a></li>
+            <li>
+              <a href="../../news">News</a>
+            </li>
+            <li class="has-submenu">
+              <a href="../../about">About</a>
+              <ul class="submenu">
+                <li><a href="../../about/contact">Contact</a></li>
+              </ul>
+            </li>
           </ul>
         </nav>
       </div>
@@ -134,7 +150,7 @@
         </div>
         <div id="copyright" class="copyright">©2024 The Griffin Legends</div>
         <div class="links">
-          <a href="../privacy-policy">Privacy Policy</a>
+          <a href="../../privacy-policy">Privacy Policy</a>
           <div>
             Website built and designed by
             <a href="https://alexanderburdiss.com">Alexander Burdiss</a>
