--- a/books/index.html
+++ b/books/index.html
@@ -45,12 +45,24 @@
         </a>
         <nav>
           <ul>
-            <li><a href="../books">Books</a></li>
+            <li class="has-submenu">
+              <a href="../books">Books</a>
+              <ul class="submenu">
+                <li><a href="../books/lore">Lore</a></li>
+              </ul>
+            </li>
             <li>
               <a href="https://the-griffin-legends.creator-spring.com">Shop</a>
             </li>
-            <li><a href="../about">About</a></li>
-            <li><a href="../contact">Contact</a></li>
+            <li>
+              <a href="../news">News</a>
+            </li>
+            <li class="has-submenu">
+              <a href="../about">About</a>
+              <ul class="submenu">
+                <li><a href="../about/contact">Contact</a></li>
+              </ul>
+            </li>
           </ul>
         </nav>
       </div>
@@ -60,6 +72,7 @@
         <section class="overlay">
           <h1>Books</h1>
           <p>I can't wait to introduce you to the <em>Griffin Legends</em>!</p>
+          <a class="button" href="./lore">Read <em>Griffin Legends</em> Lore</a>
         </section>
         <section class="book overlay">
           <div class="image-container">
