Update Lore Markdown and styles

--- a/books/lore/index.html
+++ b/books/lore/index.html
@@ -85,7 +85,7 @@
             <div class="text-container">
               <div class="avatar-container">
                 <img src="../../assets/images/summer.jpg" alt="Summer Howard" />
-                <div class="left">
+                <div class="right">
                   <a href="../../about#summer">Summer Howard</a>
                   <div class="date">October 21, 2019</div>
                   <div class="time-to-read">19 min</div>
@@ -96,6 +96,28 @@
                 This short story was inspired by a scene in Godfrey's Crusade.
                 It started out as just a rough scene but has grown so much. I
                 hope you enjoy!
+              </div>
+            </div>
+          </div>
+          <div class="article-container">
+            <img
+              src="../../assets/images/griffinshield.png"
+              alt="A griffin Shield"
+            />
+            <div class="text-container">
+              <div class="avatar-container">
+                <img src="../../assets/images/mark.jpg" alt="Mark Howard" />
+                <div class="right">
+                  <a href="../../about#summer">Mark Howard</a>
+                  <div class="date">April 7, 2021</div>
+                  <div class="time-to-read">15 min</div>
+                </div>
+              </div>
+              <h2>The Joust</h2>
+              <div>
+                This short story is a part of my fantasy series the Griffin
+                Legends. The first full length novel in the series, Godfrey's
+                Crusade, is set...
               </div>
             </div>
           </div>
