--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
         <nav>
           <ul>
             <li class="has-submenu">
-              <a href="../books">Books</a>
+              <a href="./books">Books</a>
               <ul class="submenu">
-                <li><a href="../books/lore">Lore</a></li>
+                <li><a href="./books/lore">Lore</a></li>
               </ul>
             </li>
             <li>
               <a href="https://the-griffin-legends.creator-spring.com">Shop</a>
             </li>
             <li>
-              <a href="../news">News</a>
+              <a href="./news">News</a>
             </li>
             <li class="has-submenu">
-              <a href="../about">About</a>
+              <a href="./about">About</a>
               <ul class="submenu">
-                <li><a href="../about/contact">Contact</a></li>
+                <li><a href="./about/contact">Contact</a></li>
               </ul>
             </li>
           </ul>
