--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -34,6 +34,8 @@
     <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
+    <script src="../assets/js/sanityBlockContent.js" defer></script>
+    <script src="./privacy-policy.js" defer></script>
   </head>
   <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
