feat: add dynamic content to about page
fix: fix sanity block content to not crash if no content entered

--- a/about/index.html
+++ b/about/index.html
@@ -34,6 +34,8 @@
     <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
+    <script src="../assets/js/sanityBlockContent.js" defer></script>
+    <script src="./about.js" defer></script>
   </head>
   <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -70,7 +72,9 @@
     <main id="main-content">
       <div class="inner-content">
         <section class="overlay">
-          <h1>About Us</h1>
+          <h1 id="first-section-headline">About Us</h1>
+          <p id="first-section-text"></p>
+          <div id="first-section-link-container"></div>
         </section>
         <section class="bio overlay">
           <div class="image-container">
