feat: add dynamic biographies to about add dynamic content to contact page

--- a/about/index.html
+++ b/about/index.html
@@ -76,84 +76,89 @@
           <p id="first-section-text"></p>
           <div id="first-section-link-container"></div>
         </section>
-        <section class="bio overlay">
-          <div class="image-container">
-            <img src="../assets/images/mark.jpg" alt="Mark Howard" />
-          </div>
-          <div class="text-container">
-            <h2 id="mark">Mark Howard</h2>
-            <p>
-              I’m thrilled you’re here, about to go on this crusade with me.
-              It’s been a long pilgrimage already, writing this book. It started
-              as a few short scenes I typed out during my freshman year of
-              college when I probably should have been studying. Looking back on
-              it, the first draft wasn’t exactly what I would call good now. I
-              spent the rest of my undergraduate chasing girls, playing video
-              games, and wondering why my grades weren’t better.
-            </p>
-            <p>
-              I had this story in the back of my mind, but I wasn’t sure how I
-              wanted to change it in the second draft, so I kept putting it off.
-              In 2014, I had my bachelor’s, and I decided to start writing again
-              in earnest. There were only two problems. I now had a wife and a
-              small baby to provide for, and I also decided to pursue a master’s
-              degree at this time. This, and that I scrapped most of the ideas
-              from the first draft outside of a couple of characters and the
-              setting, meant that the next draft took another five years to
-              complete. I think the work in front of you is much more mature
-              thanks to my experiences in the interim. My master’s degree gave
-              me a much greater depth of historical and literary knowledge to
-              draw inspiration from, and my time as a husband and father working
-              through grad school broadened my personal experiences enough to
-              give my characters the depth they deserved.
-            </p>
-            <p>
-              I’ve always wanted to be an author. My wife shares in this
-              ambition for herself, and we intend to make this book the first in
-              several series of books set in this world we’ve created. If you
-              enjoy what you read, please post a good review online. That will
-              help us bring more books to you, and in a more timely manner.
-              Thanks!
-            </p>
-          </div>
-        </section>
-        <section class="bio overlay">
-          <div class="image-container">
-            <img src="../assets/images/summer.jpg" alt="Summer Howard" />
-          </div>
-          <div class="text-container">
-            <h2 id="summer">Summer Howard</h2>
-            <p>
-              I have always loved reading, living the lives of the characters in
-              the books as the words unfolded their destinies. Delving into the
-              lives of heroes and heroines, young and old, seeing good verses
-              evil was a way of living for me. There are so many worlds to see.
-              I am grateful that you have chosen to enter our world with us and
-              take a journey with our characters.
-            </p>
-            <p>
-              A teacher in early elementary school ignited my desire to write.
-              As with all children, my writing wasn't very good. I kept at it
-              though, and my writing has improved by leaps and bounds since
-              then. The idea for my first book came to me when I was in high
-              school. I wrote the first draft of a chapter for an assignment in
-              a creative writing class. Time has changed the story since then.
-              While I have kept some of the ideas, much has changed as well.
-            </p>
-            <p>
-              A lot has happened in my life since that first idea. I married the
-              man of my dreams. Had children. Got my bachelor's when my oldest
-              was a year old. There have been ups and downs. Through it all the
-              idea for my book has persisted, though like I stated earlier the
-              story has morphed and grown from what it once was.
-            </p>
-            <p>
-              I am so glad that I was able to find a spouse that shares my
-              ambition to write. I can't wait to finish my book and share it
-              with you.
-            </p>
-          </div>
-        </section>
+        <div id="bio-container">
+          <section class="bio overlay">
+            <div class="image-container">
+              <img src="../assets/images/mark.jpg" alt="Mark Howard" />
+            </div>
+            <div class="text-container">
+              <h2 id="mark">Mark Howard</h2>
+              <p>
+                I’m thrilled you’re here, about to go on this crusade with me.
+                It’s been a long pilgrimage already, writing this book. It
+                started as a few short scenes I typed out during my freshman
+                year of college when I probably should have been studying.
+                Looking back on it, the first draft wasn’t exactly what I would
+                call good now. I spent the rest of my undergraduate chasing
+                girls, playing video games, and wondering why my grades weren’t
+                better.
+              </p>
+              <p>
+                I had this story in the back of my mind, but I wasn’t sure how I
+                wanted to change it in the second draft, so I kept putting it
+                off. In 2014, I had my bachelor’s, and I decided to start
+                writing again in earnest. There were only two problems. I now
+                had a wife and a small baby to provide for, and I also decided
+                to pursue a master’s degree at this time. This, and that I
+                scrapped most of the ideas from the first draft outside of a
+                couple of characters and the setting, meant that the next draft
+                took another five years to complete. I think the work in front
+                of you is much more mature thanks to my experiences in the
+                interim. My master’s degree gave me a much greater depth of
+                historical and literary knowledge to draw inspiration from, and
+                my time as a husband and father working through grad school
+                broadened my personal experiences enough to give my characters
+                the depth they deserved.
+              </p>
+              <p>
+                I’ve always wanted to be an author. My wife shares in this
+                ambition for herself, and we intend to make this book the first
+                in several series of books set in this world we’ve created. If
+                you enjoy what you read, please post a good review online. That
+                will help us bring more books to you, and in a more timely
+                manner. Thanks!
+              </p>
+            </div>
+          </section>
+          <section class="bio overlay">
+            <div class="image-container">
+              <img src="../assets/images/summer.jpg" alt="Summer Howard" />
+            </div>
+            <div class="text-container">
+              <h2 id="summer">Summer Howard</h2>
+              <p>
+                I have always loved reading, living the lives of the characters
+                in the books as the words unfolded their destinies. Delving into
+                the lives of heroes and heroines, young and old, seeing good
+                verses evil was a way of living for me. There are so many worlds
+                to see. I am grateful that you have chosen to enter our world
+                with us and take a journey with our characters.
+              </p>
+              <p>
+                A teacher in early elementary school ignited my desire to write.
+                As with all children, my writing wasn't very good. I kept at it
+                though, and my writing has improved by leaps and bounds since
+                then. The idea for my first book came to me when I was in high
+                school. I wrote the first draft of a chapter for an assignment
+                in a creative writing class. Time has changed the story since
+                then. While I have kept some of the ideas, much has changed as
+                well.
+              </p>
+              <p>
+                A lot has happened in my life since that first idea. I married
+                the man of my dreams. Had children. Got my bachelor's when my
+                oldest was a year old. There have been ups and downs. Through it
+                all the idea for my book has persisted, though like I stated
+                earlier the story has morphed and grown from what it once was.
+              </p>
+              <p>
+                I am so glad that I was able to find a spouse that shares my
+                ambition to write. I can't wait to finish my book and share it
+                with you.
+              </p>
+            </div>
+          </section>
+        </div>
       </div>
     </main>
     <footer>
