--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -34,6 +34,8 @@
     <link rel="mask-icon" href="../../safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
+    <script src="../../assets/js/sanityBlockContent.js" defer></script>
+    <script src="./contact.js" defer></script>
   </head>
   <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -74,8 +76,8 @@
     <main id="main-content">
       <div class="inner-content">
         <section class="overlay">
-          <h1>Contact Us</h1>
-          <p>
+          <h1 id="first-section-headline">Contact Us</h1>
+          <p id="first-section-text">
             Let's talk. Fill out this form and we will do our best to get back
             to you soon!
           </p>
