feat: Add dynamic content to books page header

--- a/about/index.html
+++ b/about/index.html
@@ -73,7 +73,7 @@
       <div class="inner-content">
         <section class="overlay">
           <h1 id="first-section-headline">About Us</h1>
-          <p id="first-section-text"></p>
+          <div id="first-section-text"></div>
           <div id="first-section-link-container"></div>
         </section>
         <div id="bio-container">
