--- a/books/index.html
+++ b/books/index.html
@@ -34,6 +34,8 @@
     <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
+    <script src="../assets/js/sanityBlockContent.js" defer></script>
+    <script src="./books.js" defer></script>
   </head>
   <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -70,9 +72,15 @@
     <main id="main-content">
       <div class="inner-content">
         <section class="overlay">
-          <h1>Books</h1>
-          <p>I can't wait to introduce you to the <em>Griffin Legends</em>!</p>
-          <a class="button" href="./lore">Read <em>Griffin Legends</em> Lore</a>
+          <h1 id="first-section-headline">Books</h1>
+          <div id="first-section-text">
+            I can't wait to introduce you to the <em>Griffin Legends</em>!
+          </div>
+          <div id="first-section-link-container">
+            <a class="button" href="./lore"
+              >Read <em>Griffin Legends</em> Lore</a
+            >
+          </div>
         </section>
         <section class="book overlay">
           <div class="image-container">
