Create Dynamic Books page content

--- a/about/index.html
+++ b/about/index.html
@@ -35,6 +35,8 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
     <script src="../assets/js/sanityBlockContent.js" defer></script>
+    <script src="../assets/js/formatSlug.js" defer></script>
+    <script src="../assets/js/scrollToId.js" defer></script>
     <script src="./about.js" defer></script>
   </head>
   <body>
