feat: add lore page dynamic content
- correct some styles across the site
- add 404 page

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 from unleashing an ancient evil upon Azgald or will Godfrey and
                 his friends all meet a bitter end in the frigid Nordslands?
               </p>
-              <a class="button" href="./books/godfreys-crusade"
+              <a class="button" href="./books"
                 >Purchase Godfrey's Crusade</a
               >
             </div>
