fix: improve mobile responsiveness across site

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 alt="Godfrey's Crusade"
               />
             </div>
-            <div>
+            <div class="featured-publication-text-container">
               <p>
                 A crusade is called to aid the Kingdom of Azgald in the distant
                 Nordslands, and the young idealistic knight, Godfrey, does not
@@ -110,9 +110,7 @@
                 from unleashing an ancient evil upon Azgald or will Godfrey and
                 his friends all meet a bitter end in the frigid Nordslands?
               </p>
-              <a class="button" href="./books"
-                >Purchase Godfrey's Crusade</a
-              >
+              <a class="button" href="./books">Purchase Godfrey's Crusade</a>
             </div>
           </div>
         </section>
