--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -34,6 +34,7 @@
     <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
+    <script src="../assets/js/footer.js" defer></script>
     <script src="../assets/js/sanityBlockContent.js" defer></script>
     <script src="./privacy-policy.js" defer></script>
   </head>
@@ -54,7 +55,24 @@
               </ul>
             </li>
             <li>
-              <a href="https://the-griffin-legends.creator-spring.com">Shop</a>
+              <a
+                href="https://the-griffin-legends.creator-spring.com"
+                class="external-link"
+                >Shop
+                <svg
+                  stroke="currentColor"
+                  fill="currentColor"
+                  stroke-width="0"
+                  viewBox="0 0 24 24"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M10 6V8H5V19H16V14H18V20C18 20.5523 17.5523 21 17 21H4C3.44772 21 3 20.5523 3 20V7C3 6.44772 3.44772 6 4 6H10ZM21 3V11H19L18.9999 6.413L11.2071 14.2071L9.79289 12.7929L17.5849 5H13V3H21Z"
+                  ></path>
+                </svg>
+              </a>
             </li>
             <li>
               <a href="../news">News</a>
@@ -325,7 +343,7 @@
         <div id="copyright" class="copyright">©2024 The Griffin Legends</div>
         <div class="links">
           <a href="../privacy-policy">Privacy Policy</a>
-          <div>
+          <div class="alex">
             Website built and designed by
             <a href="https://alexanderburdiss.com">Alexander Burdiss</a>
           </div>
