feat: refactor header to work on mobile

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#45659d" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#45659d" />
+    <script src="./assets/js/header.js" defer></script>
     <script src="./assets/js/footer.js" defer></script>
     <script src="./assets/js/sanityBlockContent.js" defer></script>
     <script src="./home.js" defer></script>
@@ -48,12 +49,10 @@
         </a>
         <nav>
           <ul>
-            <li class="has-submenu">
+            <li>
               <a href="./books">Books</a>
-              <ul class="submenu">
-                <li><a href="./books/lore">Lore</a></li>
-              </ul>
             </li>
+            <li><a href="./lore">Lore</a></li>
             <li>
               <a
                 href="https://the-griffin-legends.creator-spring.com"
@@ -77,12 +76,10 @@
             <li>
               <a href="./news">News</a>
             </li>
-            <li class="has-submenu">
+            <li>
               <a href="./about">About</a>
-              <ul class="submenu">
-                <li><a href="./about/contact">Contact</a></li>
-              </ul>
             </li>
+            <li><a href="./contact">Contact</a></li>
           </ul>
         </nav>
       </div>
