feat: add meta tags, robots, readme, update site manifest

--- a/books/index.html
+++ b/books/index.html
@@ -3,6 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Duty, honor, and loyalty will be put to the ultimate test."
+    />
+    <meta
+      property="og:title"
+      content="Books | The Griffin Legends"
+    />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:url"
+      content="https://thegriffinlegends.com"
+    />
+    <meta property="og:image" content="/assets/images/Meta.png" />
+    <meta
+      property="og:description"
+      content="Duty, honor, and loyalty will be put to the ultimate test."
+    />
+    <meta property="og:site_name" content="Books | The Griffin Legends" />
+
+    <meta
+      name="twitter:title"
+      content="Books | The Griffin Legends"
+    />
+    <meta
+      name="twitter:description"
+      content="Duty, honor, and loyalty will be put to the ultimate test."
+    />
+    <meta name="twitter:card" content="summary" />
     <title>Books | The Griffin Legends</title>
     <link href="../normalize.css" rel="stylesheet" />
     <link href="../global.css" rel="stylesheet" />
