fix: update home page styles, add new godfreys crusade image

--- a/books/index.html
+++ b/books/index.html
@@ -112,7 +112,7 @@
               <div class="author">
                 by <a href="../about#mark" rel="author">Mark Howard</a>
               </div>
-              <div class="isbn">ISBN-9781087982045</div>
+              <div class="isbn">ISBN-978-1944972578</div>
               <p>
                 A crusade is called to aid the Kingdom of Azgald in the distant
                 Nordslands, and the young idealistic knight, Godfrey, does not
