--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
       name="description"
       content="Duty, honor, and loyalty will be put to the ultimate test."
     />
-    <meta
-      property="og:title"
-      content="The Griffin Legends"
-    />
+    <meta property="og:title" content="The Griffin Legends" />
     <meta property="og:type" content="article" />
-    <meta
-      property="og:url"
-      content="https://thegriffinlegends.com"
-    />
+    <meta property="og:url" content="https://thegriffinlegends.com" />
     <meta property="og:image" content="/assets/images/Meta.png" />
     <meta
       property="og:description"
@@ -23,10 +17,7 @@
     />
     <meta property="og:site_name" content="The Griffin Legends" />
 
-    <meta
-      name="twitter:title"
-      content="The Griffin Legends"
-    />
+    <meta name="twitter:title" content="The Griffin Legends" />
     <meta
       name="twitter:description"
       content="Duty, honor, and loyalty will be put to the ultimate test."
@@ -166,7 +157,130 @@
               messages.
             </p>
           </div>
-          <div class="mailchimp-form">Mailchimp Form here</div>
+          <div class="mailchimp-form">
+            <div id="mc_embed_shell">
+              <link
+                href="//cdn-images.mailchimp.com/embedcode/classic-061523.css"
+                rel="stylesheet"
+                type="text/css"
+              />
+              <style type="text/css">
+                #mc_embed_signup {
+                  clear: left;
+                  font: 14px Helvetica, Arial, sans-serif;
+                  width: 600px;
+                }
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+              </style>
+              <div id="mc_embed_signup">
+                <form
+                  action="https://thegriffinlegends.us22.list-manage.com/subscribe/post?u=af0d4be043f8499c1993fbcd3&amp;id=0eeb799531&amp;f_id=00e2c2e1f0"
+                  method="post"
+                  id="mc-embedded-subscribe-form"
+                  name="mc-embedded-subscribe-form"
+                  class="validate"
+                  target="_blank"
+                >
+                  <div id="mc_embed_signup_scroll">
+                    <h2>Subscribe</h2>
+                    <div class="indicates-required">
+                      <span class="asterisk">*</span> indicates required
+                    </div>
+                    <div class="mc-field-group">
+                      <label for="mce-FNAME">First Name </label
+                      ><input
+                        type="text"
+                        name="FNAME"
+                        class="text"
+                        id="mce-FNAME"
+                        value=""
+                      />
+                    </div>
+                    <div class="mc-field-group">
+                      <label for="mce-LNAME">Last Name </label
+                      ><input
+                        type="text"
+                        name="LNAME"
+                        class="text"
+                        id="mce-LNAME"
+                        value=""
+                      />
+                    </div>
+                    <div class="mc-field-group">
+                      <label for="mce-EMAIL"
+                        >Email Address <span class="asterisk">*</span></label
+                      ><input
+                        type="email"
+                        name="EMAIL"
+                        class="required email"
+                        id="mce-EMAIL"
+                        value=""
+                        required=""
+                      />
+                    </div>
+                    <div id="mce-responses" class="clear">
+                      <div
+                        class="response"
+                        id="mce-error-response"
+                        style="display: none"
+                      ></div>
+                      <div
+                        class="response"
+                        id="mce-success-response"
+                        style="display: none"
+                      ></div>
+                    </div>
+                    <div
+                      aria-hidden="true"
+                      style="position: absolute; left: -5000px"
+                    >
+                      <input
+                        type="text"
+                        name="b_af0d4be043f8499c1993fbcd3_0eeb799531"
+                        tabindex="-1"
+                        value=""
+                      />
+                    </div>
+                    <div class="clear">
+                      <input
+                        type="submit"
+                        name="subscribe"
+                        id="mc-embedded-subscribe"
+                        class="button"
+                        value="Subscribe"
+                      />
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <script
+                type="text/javascript"
+                src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+              ></script>
+              <script type="text/javascript">
+                (function ($) {
+                  window.fnames = new Array();
+                  window.ftypes = new Array();
+                  fnames[1] = 'FNAME';
+                  ftypes[1] = 'text';
+                  fnames[2] = 'LNAME';
+                  ftypes[2] = 'text';
+                  fnames[0] = 'EMAIL';
+                  ftypes[0] = 'email';
+                  fnames[3] = 'ADDRESS';
+                  ftypes[3] = 'address';
+                  fnames[4] = 'PHONE';
+                  ftypes[4] = 'phone';
+                  fnames[5] = 'BIRTHDAY';
+                  ftypes[5] = 'birthday';
+                  fnames[6] = 'COMPANY';
+                  ftypes[6] = 'text';
+                })(jQuery);
+                var $mcj = jQuery.noConflict(true);
+              </script>
+            </div>
+          </div>
         </section>
       </div>
     </main>
