feat: update homepage to be fully dynamic

--- a/index.html
+++ b/index.html
@@ -119,33 +119,22 @@
           </div>
         </section>
         <section class="featured-publication-container overlay">
-          <h2>Featured Publication</h2>
-          <h3>Godfrey's Crusade</h3>
+          <h2 id="featured-book-headline">Featured Publication</h2>
+          <h3 id="featured-book-title"></h3>
           <div class="fifty-fifty-column">
             <div class="featured-publication-image-container">
               <img
+                id="featured-book-image"
                 class="featured-publication-image"
-                src="./assets/images/godfreyscrusadewarrington.jpg"
-                alt="Godfrey's Crusade"
               />
             </div>
             <div class="featured-publication-text-container">
-              <p>
-                A crusade is called to aid the Kingdom of Azgald in the distant
-                Nordslands, and the young idealistic knight, Godfrey, does not
-                hesitate to volunteer. Yet Godfrey soon learns that the greatest
-                threat to the expedition’s success is not the savage clans under
-                High Warlord Alvir and the Great Witch of the North, Nera, or
-                the orcs and cyclopes that fight beside the clans but the
-                rivalries between the crusaders themselves. Can Godfrey
-                interpret the vision granted to him by the gods and unite the
-                crusaders with his holy blade? Will his love, Madeline, be able
-                to keep her magical powers hidden from suspicious priests and
-                opportunistic lords? Will they be able to stop Nera and Alvir
-                from unleashing an ancient evil upon Azgald or will Godfrey and
-                his friends all meet a bitter end in the frigid Nordslands?
-              </p>
-              <a class="button" href="./books">Purchase Godfrey's Crusade</a>
+              <div id="featured-book-description">
+                <p>Loading Featured Publication...</p>
+              </div>
+              <a id="featured-book-cta" class="button" href="./books"
+                >Purchase</a
+              >
             </div>
           </div>
         </section>
